force-app/main/default/objects/report_sender__DashboardView__c/report_sender__DashboardView__c.object-meta.xml
<CustomObject>
    <label>DashboardView</label>
    <nameField>
        <label>Dashboard_View</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DashboardViews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>