force-app/main/default/objects/report_sender__DashboardView__c/fields/report_sender__ChartUrl__c.field-meta.xml
<CustomField>
    <fullName>report_sender__ChartUrl__c</fullName>
    <label>ChartUrl</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>