force-app/main/default/objects/report_sender__DashboardView__c/fields/report_sender__DashboardId__c.field-meta.xml
<CustomField>
    <fullName>report_sender__DashboardId__c</fullName>
    <label>DashboardId</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>