force-app/main/default/objects/report_sender__DashboardView__c/fields/report_sender__Dshboard_Name__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Dshboard_Name__c</fullName>
    <label>Dshboard_Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>