force-app/main/default/objects/report_sender__DashboardView__c/fields/report_sender__Email_Data__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Email_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Data</label>
    <referenceTo>report_sender__Email_Data__c</referenceTo>
    <relationshipLabel>DashboardView</relationshipLabel>
    <relationshipName>DashboardView</relationshipName>
    <type>Lookup</type>
</CustomField>