force-app/main/default/objects/report_sender__DashboardView__c/fields/report_sender__ReportId__c.field-meta.xml
<CustomField>
    <fullName>report_sender__ReportId__c</fullName>
    <label>ReportId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>