force-app/main/default/objects/report_sender__DashboardView__c/listViews/allSelection_DashboardView.listView-meta.xml
<ListView>
    <fullName>allSelection_DashboardView</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>